javac修改类初步完成