@@ -25,6 +25,7 @@ tasks.withType(JavaCompile).configureEach {
             "--add-exports", "jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED",
             "--add-exports", "jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED",
             "--add-exports", "jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED",
+            "--add-exports", "jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED",
             "--add-exports", "jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED",
     ]
 }
